--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
+    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern",
+    "server": "json-server --host 192.168.1.17 --port 5000 --watch db.json --routes routes.json"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.11",
+    "@react-native-async-storage/async-storage": "^1.15.8",
+    "dotenv": "^10.0.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.9",
+    "graphql": "^15.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-web": "~0.13.12",
+    "react-router-dom": "^5.3.0",
     "react-router-native": "^5.2.1",
     "yup": "^0.32.9"
   },
@@ -24,7 +30,8 @@
     "@babel/eslint-parser": "^7.15.4",
     "@expo/webpack-config": "^0.15.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.25.1"
+    "eslint-plugin-react": "^7.25.1",
+    "json-server": "^0.16.3"
   },
   "private": true
 }
